<resources>
    <string name="app_name">Stonebridge</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="be_the_first_to" translatable="false">Be the first to</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="cell_no" translatable="false">Cell No</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="email_address" translatable="false">Email Address</string>
    <string name="car_dealership" translatable="false">Container Consumables</string>
    <string name="receive_updates_from" translatable="false">Receive Updates From</string>
    <string name="manufacturer" translatable="false">Car Manufacturer</string>
    <string name="ask">Ask\?</string>
    <string name="todo">TODO</string>
    <string name="about_first_paragraph" translatable="false">If you\'d ask me a decade ago to name some of things that would interest me and have an impact on my life,
     I can honestly tell you that MakeUp and Styling was the furthest thing from my mind. Friends and family, sure!, music, reading, fashion, absolutely!- but
    MakeUp? Not in the slightest.</string>
    <string name="about_last_paragraph" translatable="false">I started playing around with MakeUp when I began to have skin problems which left visible scarring on my face.
     It made me self-conscious. Over the years, my initial dabbling in the world of MakeUp transformed into a full-blown obsession. Now, at 29 years old,
     MakeUp has become an important part of my daily routine.</string>
    <string name="about_title" translatable="false">PRESHIKA EBRAHIM</string>
    <string name="about_subtitle" translatable="false">Professional MakeUp Artist and Hair Stylist</string>
    <string name="cell" translatable="false">Call:(031) 836 4247</string>
    <string name="email">info@dazzleondivas.co.za</string>
    <string-array name="users">
        <item>Select users..</item>
        <item>All</item>
        <item>Staff</item>
        <item>Dealers</item>
        <item>Partners</item>
    </string-array>
    <string-array name="provinces">
        <item>All Provinces</item>
        <item>Eastern Cape</item>
        <item>Western Cape</item>
        <item>Northern Cape</item>
        <item>Free State</item>
        <item>North West</item>
        <item>Gauteng</item>
        <item>Limpopo</item>
        <item>Mpumalanga</item>
        <item>KwaZulu-Natal</item>
    </string-array>
    <string-array name="make">
        <item>Any Cars</item>
        <item>VW</item>
        <item>Mazda</item>
        <item>Ford</item>
        <item>Toyota</item>
        <item>Isuzu</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Mercedes</item>
        <item>Hyundai</item>
        <item>Nissan</item>
        <item>Jeep</item>
        <item>Chevrolet</item>
        <item>Other</item>
    </string-array>
    <string-array name="years">
        <item>1990 - 2024</item>
        <item>1990 - 1994</item>
        <item>1995 - 1999</item>
        <item>2000 - 2004</item>
        <item>2005 - 2009</item>
        <item>2010 - 2014</item>
        <item>2015 - 2019</item>
        <item>2020 - 2024</item>
    </string-array>
    <string-array name="prices">
        <item>R10 000 - R 999 000</item>
        <item>R 10 000 - R 99 000</item>
        <item>R 100 000 - R 299 000</item>
        <item>R 300 000 - R 499 000</item>
        <item>R 500 000 - R 799 000 </item>
        <item>R 800 000 - R 999 000</item>
    </string-array>
</resources>
