<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:theme="@style/InputLayout"
android:background="@drawable/backgroundsplash"
android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/subscribe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="#2a303a"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#fff"
                        android:text="@string/be_the_first_to"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12pt"
                        android:textColor="#fff"
                        android:text="@string/receive_updates_from"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:layout_gravity="center_horizontal"
                        android:text="DAZZLE"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/empty_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_features_background">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_address"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/email"
                            android:textCursorDrawable="@drawable/edittext_cursor"
                            android:layout_width="match_parent"
                            android:textSize="8pt"
                            android:inputType="textEmailAddress"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/full_name"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:textSize="8pt"
                            android:inputType="textPersonName"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Birthday"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/number"
                            android:layout_width="match_parent"
                            android:textSize="8pt"
                            android:inputType="text"
                            android:hint="dd/mm"
                            android:textColorHint="#EAEAEA"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/manufacturer"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/maker"
                            android:layout_width="match_parent"
                            android:textSize="8pt"
                            android:inputType="text"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Price Range"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/vehicle_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
                <LinearLayout
                    android:id="@+id/subscribe_button"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:layout_margin="16dp"
                    android:padding="5dp"
                    android:background="@drawable/search_button_background"
                    android:textColor="@drawable/button_selector"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:focusable="true">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp">
                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/signup"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="9pt"
                            android:text="Subscribe" />
                    </FrameLayout>
                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>