<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/messages"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#000"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:fitsSystemWindows="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/message_layout_message"
                android:layout_marginTop="0dp"
                android:layout_below="@+id/title_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="@string/about_title"
                            android:textColor="@color/white_color"
                            android:textSize="@dimen/large_subject_size"
                            android:ellipsize="end"/>
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="@string/about_subtitle"
                            android:textSize="@dimen/subject_text_size"
                            android:textColor="@color/white_color"
                            android:ellipsize="end"/>
                    </FrameLayout>
                </LinearLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/video_thumbnail"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/divaprofile" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pointer_description"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/title_message"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:background="@drawable/layout_features_background"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="@string/about_first_paragraph"
                            android:textColor="@color/menuColor"
                            android:textSize="@dimen/description_text_size"
                            android:ellipsize="end"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:paddingBottom="5dp">

                        <TextView
                            android:id="@+id/message_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="@string/about_last_paragraph"
                            android:textColor="@color/menuColor"
                            android:textSize="@dimen/description_text_size"
                            android:ellipsize="end"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_choose"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/contacts_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_vertical|center_horizontal"
                        android:paddingTop="20dp"
                        android:background="@drawable/message"/>
                    <LinearLayout
                        android:id="@+id/email_to"
                        android:visibility="gone"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/core_groups_baground"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:clickable="true"
                            android:focusable="true">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:layout_gravity="center"
                                android:ellipsize="end"
                                android:textSize="@dimen/lowest_description_size"
                                android:textColor="@color/menuColor"
                                android:text="@string/email"/>
                        </FrameLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:rotation="180"
                            android:background="@drawable/pointer_description"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_vertical|center_horizontal"
                        android:background="@drawable/instagram"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:layout_gravity="bottom|center_vertical|center_horizontal"
                        android:background="@drawable/call"/>
                    <LinearLayout
                        android:id="@+id/call_number"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:layout_height="wrap_content">
                        <FrameLayout
                            android:id="@+id/public_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/core_groups_baground"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:clickable="true"
                            android:focusable="true">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:layout_gravity="center"
                                android:ellipsize="end"
                                android:textSize="@dimen/lowest_description_size"
                                android:textColor="@color/menuColor"
                                android:text="@string/cell"/>
                        </FrameLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:rotation="180"
                            android:background="@drawable/pointer_description"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

        <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/layout_features_background"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">
            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:name="com.google.android.gms.maps.SupportMapFragment">
            </fragment>
        </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>